<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.ChangePassword"
    android:gravity="center"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/editchange"
        android:text="@string/Change"
        android:textSize="35sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/edittextcurrentpass"
        android:hint="@string/CurrentPassword"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/edittext_background"
        android:paddingLeft="20dp"
        />
    <EditText
        android:id="@+id/edittextnewpassword"
        android:hint="@string/NewPassword"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/edittext_background"
        android:paddingLeft="20dp"
        />
    <EditText
        android:id="@+id/edittextagainpass"
        android:hint="@string/Confirm"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/edittext_background"
        android:paddingLeft="20dp"
        />

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:layout_height="wrap_content">
        <android.widget.Button
            android:id="@+id/btnChange"
            android:text="@string/btnChange"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            />

        <android.widget.Button
            android:id="@+id/btnHome"
            android:text="@string/btnHome"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            />
    </LinearLayout>










</LinearLayout>