<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/editbanner"
        android:gravity="center"
        android:textSize="50dp"
        android:text="@string/SignIn"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/txtemail"
        android:hint="@string/EnterEmail"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/edittext_background"
        android:paddingLeft="20dp"
        />
    <EditText
        android:id="@+id/txtpassword"
        android:hint="@string/EnterPassword"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/edittext_background"
        android:paddingLeft="20dp"
        />


    <CheckBox
        android:id="@+id/bntremember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Remember Me"
        android:layout_below="@id/edittextconfirmpassword"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <android.widget.Button
            android:id="@+id/btnLogin"
            android:text="@string/SignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"/>

        <android.widget.Button
            android:id="@+id/btnExit"
            android:text="@string/Exit"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"/>
    </LinearLayout>

</LinearLayout>